--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -29,37 +29,36 @@
   </div>
 </div>
 
-<div class="d-flex">
-  <div class="container">
-    <h2><%= @list.name %></h2>
-    <div class="row">
-    <ul class="list-group">
-      <% @list.bookmarks.each do |bookmark| %>
-        <div class="col-6">
-          <li class="list-group-item d-flex">
-          <div>
-            <img class="mx-auto d-block img-fluid img-thumbnail" style="max-width:80%" alt="Responsive image" src=<%= bookmark.movie.poster_url  %>>
-          </div>
-            <div class="col-6">
-              <h3 class="border-bottom"><%= bookmark.movie.title %></h3>
-              <p>Comment:<br><%= bookmark.comment %></p>
-            </div>
-          </li>
-          <li class="list-group-item">
-              <%= link_to "Remove",
-                          bookmark_path(bookmark), class: "btn border",
-                          method: :delete,
-                          data: { confirm: "Are you sure?" } %>
-            </li>
-        </div>
-      <% end %>
-    </ul>
+<div>
+    <div class="container p-3">
+      <h2><%= @list.name %></h2>
     </div>
-  </div>
-
-  <div class="d-flex">
-    <div>
-      <%= link_to "Add movies!", new_list_bookmark_path(@list), class: "btn btn-flat"%>
+  <div class="container">
+    <div class="row">
+      <ul class="list-group col-6">
+        <% @list.bookmarks.each do |bookmark| %>
+          <div>
+            <li class="list-group-item d-flex">
+            <div>
+              <img class="mx-auto d-block img-fluid img-thumbnail" style="max-width:80%" alt="Responsive image" src=<%= bookmark.movie.poster_url  %>>
+            </div>
+              <div class="col-6">
+                <h3 class="border-bottom"><%= bookmark.movie.title %></h3>
+                <p>Comment:<br><%= bookmark.comment %></p>
+              </div>
+            </li>
+            <li class="list-group-item">
+                <%= link_to "Remove",
+                            bookmark_path(bookmark), class: "btn border",
+                            method: :delete,
+                            data: { confirm: "Are you sure?" } %>
+            </li>
+          </div>
+        <% end %>
+      </ul>
+      <div class="col-3">
+        <%= link_to "Add movies!", new_list_bookmark_path(@list), class: "btn btn-flat"%>
+      </div>
     </div>
   </div>
 </div>
