--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
-             <%= link_to "Home", lists_path, class: "nav-link"%>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Add list</a>
@@ -29,37 +29,11 @@
   </div>
 </div>
 
-<div>
-    <div class="container p-3">
-      <h2><%= @list.name %></h2>
-    </div>
-  <div class="container">
-    <div class="row">
-      <ul class="list-group col-6">
-        <% @list.bookmarks.each do |bookmark| %>
-          <div>
-            <li class="list-group-item d-flex">
-            <div>
-              <img class="mx-auto d-block img-fluid img-thumbnail" style="max-width:80%" alt="Responsive image" src=<%= bookmark.movie.poster_url  %>>
-            </div>
-              <div class="col-6">
-                <h3 class="border-bottom"><%= bookmark.movie.title %></h3>
-                <p>Comment:<br><%= bookmark.comment %></p>
-              </div>
-            </li>
-            <li class="list-group-item">
-                <%= link_to "Remove",
-                            bookmark_path(bookmark), class: "btn border",
-                            method: :delete,
-                            data: { confirm: "Are you sure?" } %>
-                             ||| <%= link_to "Edit",edit_bookmark_path(bookmark)%>
-            </li>
-          </div>
-        <% end %>
-      </ul>
-      <div class="col-3">
-        <%= link_to "Add movies!", new_list_bookmark_path(@list), class: "btn btn-flat"%>
-      </div>
-    </div>
-  </div>
+<div class="container">
+  <h2>Edit bookmark</h2>
+  <%= simple_form_for [ @list, @bookmark ] do |f| %>
+    <%= f.association :movie %>
+    <%= f.input :comment %>
+    <%= f.submit "Submit", class: "btn btn-primary" %>
+  <% end %>
 </div>
