--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -49,10 +49,10 @@
             </li>
             <li class="list-group-item">
                 <%= link_to "Remove",
-                            bookmark_path(bookmark), class: "btn border",
+                            bookmark_path(bookmark), class: "btn btn-delete",
                             method: :delete,
                             data: { confirm: "Are you sure?" } %>
-                             ||| <%= link_to "Edit",edit_bookmark_path(bookmark)%>
+                              <%= link_to "Edit",edit_bookmark_path(bookmark), class: "btn btn-blue" %>
             </li>
           </div>
         <% end %>
