--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -36,4 +36,5 @@
     <%= f.input :comment %>
     <%= f.submit "Submit", class: "btn btn-primary" %>
   <% end %>
+  <%= link_to "Back to list", list_path(@bookmark.list), class:"btn btn-flat mt-3" %>
 </div>
