--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -32,6 +32,7 @@
 <div class="container">
   <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.button :submit, class: "btn btn-flat"%>
   <% end %>
 </div>
