--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
-             <%= link_to "Home", lists_path, class: "nav-link"%>
+             <%= link_to "Home", root_path, class: "nav-link"%>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Add list</a>
