--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -13,7 +13,7 @@
              <%= link_to "Home", root_path, class: "nav-link"%>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Add list</a>
+            <%= link_to "Add list", new_list_path, class: "nav-link"%>
           </li>
           <%# <li class="nav-item dropdown">
             <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
