--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,11 +10,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
-          <li class="nav-item active">
+         <li class="nav-item active">
              <%= link_to "Home", root_path, class: "nav-link"%>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Add list</a>
+            <%= link_to "Add list", new_list_path, class: "nav-link"%>
           </li>
           <%# <li class="nav-item dropdown">
             <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
