--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -18,3 +18,11 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+.banner-show{
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  padding: 150px 0;
+}
