--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -28,7 +28,7 @@
     </div>
   </div>
 </div>
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @list.photo.key %>')">
+<div class="banner-show" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @list.photo.key %>')">
   <div class="container">
     <h1 class="text-center"><%= @list.name %></h1>
   </div>
