added button delete list

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -58,3 +58,16 @@
   color: white;
   opacity: 1;
 }
+
+.btn-x {
+  // line-height: 12px;
+  width: 18px;
+  font-size: 8pt;
+  font-family: tahoma;
+  margin-top: 1px;
+  margin-right: 2px;
+  position:absolute;
+  color: rgb(160, 49, 49);
+  bottom:5px;
+  right:0;
+}
