--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -28,7 +28,7 @@
     </div>
   </div>
 </div>
-<div class="banner-show" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @list.photo.key %>')">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @list.photo.key %>')">
   <div class="container">
     <h1 class="text-center"><%= @list.name %></h1>
   </div>
@@ -51,18 +51,22 @@
                 <p>Comment:<br><%= bookmark.comment %></p>
               </div>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item d-flex justify-content-between">
+            <%= link_to "Edit",edit_bookmark_path(bookmark), class: "btn btn-blue" %>
                 <%= link_to "Remove",
                             bookmark_path(bookmark), class: "btn btn-delete",
                             method: :delete,
                             data: { confirm: "Are you sure?" } %>
-                              <%= link_to "Edit",edit_bookmark_path(bookmark), class: "btn btn-blue" %>
             </li>
           </div>
         <% end %>
       </ul>
       <div class="col-3">
         <%= link_to "Add movies!", new_list_bookmark_path(@list), class: "btn btn-flat"%>
+        <%= link_to "Remove List",
+                            list_path(@list), class: "btn btn-delete",
+                            method: :delete,
+                            data: { confirm: "Are you sure?" } %>
       </div>
     </div>
   </div>
