--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,10 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
 }
 
 .banner h1 {
@@ -19,10 +23,11 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
-.banner-show{
+
+.banner-show {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-
   padding: 150px 0;
+  clip-path: polygon(0 0, 44% 0, 100% 0, 100% 100%, 49% 81%, 0 91%);
 }
