--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -38,17 +38,19 @@
   </div>
 </div>
 
-<div class=" mt-5">
-  <div class="d-flex justify-content-around p-3">
-  <% @lists.each do |list| %>
-    <div class="card rounded-top"  style="width: 18rem;">
-      <%= cl_image_tag list.photo.key, class:"rounded-top card-img-top border-bottom", alt: list.name %>
-      <div class="card-body">
-        <p class="card-text"><%= list.name %></p>
+<div class="container mt-5">
+  <div class="row justify-content-center m-3 p-3">
+    <% @lists.each do |list| %>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 m-4">
+        <div class="card rounded-top"  style="width: 18rem;">
+          <%= cl_image_tag list.photo.key, class:"rounded-top card-img-top border-bottom", alt: list.name %>
+          <div class="card-body">
+            <p class="card-text"><%= list.name %></p>
+          </div>
+            <%= link_to "Open list", list_path(list), class:"btn btn-flat" %>
+        </div>
       </div>
-        <%= link_to "Open list", list_path(list), class:"btn btn-flat" %>
+    <% end %>
     </div>
-  <% end %>
   </div>
-
 </div>
