--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -32,14 +32,16 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://media.istockphoto.com/photos/empty-cinema-screen-with-audience-picture-id453554783?k=20&m=453554783&s=612x612&w=0&h=SWzx0yaI4h_QFnOF-GI5yDHyZyQdjPzen3mXyx7ddbY=);">
   <div class="container">
-    <h1>Listomovies!</h1>
-    <p>Create your own favorite movies lists!</p>
-    <%= link_to "Create your list now!", new_list_path, class:"btn btn-flat" %>
+    <div class="text-center"">
+      <h1>Listomovies!</h1>
+      <p>Create your own favorite movies lists!</p>
+      <%= link_to "Create your list now!", new_list_path, class:"btn btn-flat" %>
+    </div>
   </div>
 </div>
 
 <div class="container mt-5">
-  <div class="row justify-content-center m-3 p-3">
+  <div class="row justify-content-center m-2  p-1">
     <% @lists.each do |list| %>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 m-4">
         <div class="card rounded-top"  style="width: 18rem;">
